--- a/Parser/pom.xml
+++ b/Parser/pom.xml
@@ -23,6 +23,25 @@
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 		
+		<dependency>
+			<groupId>edu.lu.uni.serval</groupId>
+			<artifactId>GitTraverse</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		
+		<!-- gumtree -->
+		<dependency>
+			<groupId>com.github.gumtreediff</groupId>
+			<artifactId>core</artifactId>
+			<version>2.0.0-SNAPSHOT</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.github.gumtreediff</groupId>
+			<artifactId>gen.jdt</artifactId>
+			<version>2.0.0-SNAPSHOT</version>
+		</dependency>
+		
 		<!-- dom4j -->
 		<dependency>
 			<groupId>dom4j</groupId>
@@ -37,24 +56,7 @@
 			<version>${akka.version}</version>
 		</dependency>
 
-		<dependency>
-			<groupId>com.github.gumtreediff</groupId>
-			<artifactId>core</artifactId>
-			<version>2.0.0-SNAPSHOT</version>
-		</dependency>
-
-		<dependency>
-			<groupId>com.github.gumtreediff</groupId>
-			<artifactId>gen.jdt</artifactId>
-			<version>2.0.0-SNAPSHOT</version>
-		</dependency>
-		
-		<dependency>
-			<groupId>edu.lu.uni.serval</groupId>
-			<artifactId>GitTraveller</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
-		</dependency>
-
+		<!-- junit -->
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
